--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Zhch2</title>
-  <base href="/">
+  <base href="/zhch2/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
@@ -15,7 +15,7 @@
   <!-- Image and text -->
   <nav class="navbar navbar-light bg-light justify-content-start">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="/assets/imgs/ng-book2.png" class="d-inline-block align-top" alt="">
+      <img src="./assets/imgs/ng-book2.png" class="d-inline-block align-top" alt="">
       ng-book2
     </a>
     <h4>Anhular 2 Simple Reddit</h4>
